; ModuleID = '/home/carl/AnghaBench/i3/src/extr_con.c_con_move_to_output.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_con.c_con_move_to_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@child = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Moving con %p to output %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @con_move_to_output(i32* %0, %struct.TYPE_4__* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32* null, i32** %7, align 8
  %8 = load i32*, i32** %7, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @output_get_content(i32 %11)
  %13 = load i32, i32* @child, align 4
  %14 = call i32 @workspace_is_visible(i32 %13)
  %15 = call i32 @GREP_FIRST(i32* %8, i32 %12, i32 %14)
  %16 = load i32*, i32** %7, align 8
  %17 = icmp ne i32* %16, null
  %18 = zext i1 %17 to i32
  %19 = call i32 @assert(i32 %18)
  %20 = load i32*, i32** %4, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %22 = call i32 @output_primary_name(%struct.TYPE_4__* %21)
  %23 = call i32 @DLOG(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32* %20, i32 %22)
  %24 = load i32*, i32** %4, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @con_move_to_workspace(i32* %24, i32* %25, i32 %26, i32 0, i32 0)
  ret void
}

declare dso_local i32 @GREP_FIRST(i32*, i32, i32) #1

declare dso_local i32 @output_get_content(i32) #1

declare dso_local i32 @workspace_is_visible(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @DLOG(i8*, i32*, i32) #1

declare dso_local i32 @output_primary_name(%struct.TYPE_4__*) #1

declare dso_local i32 @con_move_to_workspace(i32*, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
